# mouse-tracker-for-cubism

./: .gitmodules  CMakeLists.txt  README.md  build.sh  config.txt
example/: build.sh  demo.patch  generate_patch.sh  upgrade.sh
include/: mouse_cursor_tracker.h
src/: gui.glade  mouse_cursor_tracker.cpp  mouse_cursor_tracker_gui.cpp
